# corek

./: .gitignore  LICENCE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
corek/: __init__.py  corek_grammar.lark  rules_engine.py
corek/transformer/: corek_transformer.py
src/: corek_grammar.lark  corek_transformer.py  rule_eng.py  rules_engine.py  workflow.yml
tests/: test_rules_engine.py
