[project]
name = "corek"
version = "0.0.2"
authors = [
    { name = "Rai Raman" },
]
description = "One line expression evaluator"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    "lark ~=1.1.8",
    "importlib_resources==6.1.1",
]

[project.urls]
"Homepage" = "https://github.com/rairaman/corek"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


